fixed checkbox label out of alignment

--- a/src/styles/square-checkbox.css
+++ b/src/styles/square-checkbox.css
@@ -34,4 +34,7 @@
 
 .square-checkbox-label {
   display: inline-block;
+  position: relative;
+  top: -0.4em; /* input[type]'s margin could affect the positioning */
+  color: #7C7C7C;
 }
